feat: Implement workout streak tracking, update dashboard summary, and optimize mobile UI.

--- a/index.html
+++ b/index.html
@@ -45,20 +45,20 @@
             <section class="dashboard-grid">
                 <div class="card summary-card">
                     <div class="icon-box purple">
-                        <i class="fa-solid fa-fire"></i>
+                        <i class="fa-solid fa-trophy"></i>
                     </div>
                     <div class="summary-info">
-                        <h3>Total Workouts</h3>
-                        <p id="total-workouts">0</p>
+                        <h3>Longest Streak</h3>
+                        <p id="longest-streak">0 Days</p>
                     </div>
                 </div>
                 <div class="card summary-card">
                     <div class="icon-box blue">
-                        <i class="fa-solid fa-weight-hanging"></i>
+                        <i class="fa-solid fa-fire"></i>
                     </div>
                     <div class="summary-info">
-                        <h3>Total Volume</h3>
-                        <p id="total-volume">0 lbs</p>
+                        <h3>Workout Streak</h3>
+                        <p id="current-streak">0 Days</p>
                     </div>
                 </div>
                 <div class="card summary-card">
@@ -178,6 +178,9 @@
                 </div>
             </div>
         </main>
+        <footer style="text-align: center; padding: 1rem; color: var(--text-secondary); font-size: 0.8rem;">
+            v1
+        </footer>
     </div>
 
     <script src="app.js"></script>
