refactor: Migrate workout data storage from localStorage to IndexedDB.

--- a/index.html
+++ b/index.html
@@ -204,10 +204,11 @@
             </div>
         </main>
         <footer style="text-align: center; padding: 1rem; color: var(--text-secondary); font-size: 0.8rem;">
-            v1.03
+            v1.04
         </footer>
     </div>
 
+    <script src="db.js"></script>
     <script src="app.js"></script>
     <script>
         if ('serviceWorker' in navigator) {
